Fixed some issues with pom files.